# exbotxi_apps

./: LICENSE  README.md
exbotxi_avoidence/: CMakeLists.txt  package.xml
exbotxi_avoidence/launch/: avoidence_base.launch
exbotxi_avoidence/nodes/: avoidence_base.cpp  avoidence_with_cmd.cpp
exbotxi_recognition/: CMakeLists.txt  package.xml
exbotxi_recognition/include/: commands.csv
exbotxi_recognition/launch/: centers_with_avoidence.launch  cmd_center.launch  vel_center.launch
exbotxi_recognition/msg/: TwistWithMask.msg
exbotxi_recognition/nodes/: cmd_center.cpp  vel_center.cpp
